--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="carousel-caption">
               <h1>Fashion and Student Trends</h1>
               <p>UC Berkeley's premier fashion student organization</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
             </div>
           </div>
         </div>
@@ -121,9 +121,8 @@
           <img class="second-slide" src="img/carousel2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Browse our Lookbooks</h1>
-              <p>Cultivated by our talented team of photographers, creative directors, and models.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1></h1>
+              <p></p>
             </div>
           </div>
         </div>
