--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Fashion and Student Trends at Cal</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -60,15 +60,15 @@
       </button>
     </div>
     <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-left">    
+  <!-- <div class="navbar-center navbar-brand" href="#"><a class="navbar-brand"><img src="img/FASTlogo.png"></a></div> -->
+    <div class="navbar-center"><a href="#"><img src="img/FASTlogo.png"></a></div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+       <ul class="nav navbar-nav navbar-left">    
           <li><a href="http://fastcal.net">About</a></li>
           <li><a href="#">Team</a></li>
           <li><a href="#">Lookbooks</a></li>
           <li><a href="#">Careers</a></li>
       </ul>  
-  <!-- <div class="navbar-center navbar-brand" href="#"><a class="navbar-brand"><img src="img/FASTlogo.png"></a></div> -->
-    <div class="navbar-center"><a href="#"><img src="img/FASTlogo.png"></a></div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
       <ul class="nav navbar-nav navbar-right">   
       <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -76,20 +76,10 @@
         </div>
         <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
       </form> -->
-        <li><a href="#"><i class="fa fa-facebook-official fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-twitter fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-instagram fa-2x"></i></a></li>
-        <li><a href="#"><i class="fa fa-pinterest-p fa-2x"></i></a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
+        <li><a href="http://facebook.com/FASTcal"><i class="fa fa-facebook-official fa-2x"></i></a></li>
+        <li><a href="http://twitter.com/FASTcal"><i class="fa fa-twitter fa-2x"></i></a></li>
+        <li><a href="http://instagram.com/FASTcal"><i class="fa fa-instagram fa-2x"></i></a></li>
+        <li><a href="http://pinterest.com/FASTcal"><i class="fa fa-pinterest-p fa-2x"></i></a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </nav>
@@ -159,7 +149,7 @@
     <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
-        <a href="#" class="thumbnail">
+        <a href="blog.html" class="thumbnail">
            <img src="img/grid1.jpg" class="img-responsive">
            <div class="overlay"></div>
            <div class="caption">The Blog</div>
