--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
       </ol>
+
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img class="first-slide" src="img/carousel1.jpg" alt="First slide">
@@ -144,9 +145,39 @@
       </div>
     </div> -->
 
+<div class="container marketing">
+<div class="quote text-center">"Push the fashion industry into unventured grounds."</div>
+<div class="row">
+        <a href="blog.html">
+        <div class="col-lg-4">
+          <img class="thumbnail img-responsive" src="img/grid1.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>The Blog</h2></a>
+          <p>Read the latest fashion from campus and beyond.</p>
+        </div><!-- /.col-lg-4 -->
+        <a href="blog.html">
+        <div class="col-lg-4">
+          <img class="thumbnail img-responsive" src="img/grid2.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Caught on Campus</h2></a>
+          <p>Meet the stylish students at UC Berkeley</p>
+        </div><!-- /.col-lg-4 -->
+        
+        <a href="blog.html">
+        <div class="col-lg-4">
+          <img class="thumbnail img-responsive" src="img/grid3.jpg" alt="Generic placeholder image" width="140" height="140">
+          <h2>Meet the Designers</h2></a>
+          <p>Our talented designers behind the scenes before show day.</p>
+        </div><!-- /.col-lg-4 -->
+        
+      </div><!-- /.row -->
+
+    </div>
+<!--     <div class="container">
+     <hr class="featurette-divider">
+    </div> -->
+
  <!-- Grid of Images
     ================================================== -->
-    <div class="container-fluid">
+    <!-- <div class="container-fluid">
     <div class="row">
       <div class="col-md-4">
         <a href="blog.html" class="thumbnail">
@@ -170,7 +201,7 @@
         </a>
       </div>
     </div>
-    </div>
+    </div> -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
