--- a/blog.html
+++ b/blog.html
@@ -135,8 +135,8 @@
     </div>
     </div>
       <!-- START THE FEATURETTES -->
-
       <hr class="featurette-divider">
+      <div class="container posts">
 
       <div class="row featurette">
         <div class="col-md-7">
@@ -188,16 +188,17 @@
         </div>
       </div>
 
+      </div>
       <hr class="featurette-divider">
-
       <div class="prev-next row">
         <a class="btn btn-lg btn-primary pull-right" href="#" role="button">Next <i class="fa fa-angle-right"></i></a>
       </div>
-
+</div>
       <!-- /END THE FEATURETTES -->
 
 
       <!-- FOOTER -->
+    <div class="container-fluid">
       <footer>
         <div class="footer row">
           <ul class="pull-right">
@@ -211,8 +212,9 @@
         <p>Made with <i class="fa fa-heart"></i> in Berkeley, CA</p>
         <p>&copy; 2015 Fashion and Student Trends &middot; University of California, Berkeley</p>
       </footer>
+    </div>
 
-    </div><!-- /.container -->
+  <!-- /.container -->
 
 
 
